# Because

./: .gitignore  README.md  setup.cfg
because/: __init__.py  utils.py
because/causality/: __init__.py  calc_indeps.py  cdisc.py  cgraph.py  cprob.py  cquery.py  cscan.py  rv.py
because/causality/test/: cTest.py  cdiscTest.py  graphTest.py  interventionTest.py  interventionTest2.py  metricsTest.py  scanTest.py  validationTest.py
because/hpcc_utils/: __init__.py  formatQuery.py  format_exc.py  globlock.py  parseQuery.py
because/hpcc_utils/test/: formatQueryTest.py
because/models/: M0.py  M1.py  M10.py  M11.py  M12.py  M1A.py  M1B.py  M1C.py  M2.py  M2D.py  M3-discrete.py  M3.py  M4.py  M5.py  M6.py  M7.py  M8.py  M9.py  PW1.py  craps.py  depTest.py  discTest.py  doubleCondition.py  iceCream.py  nCondition.py  nCondition1108.py  rkhsTest.py  rkhsTest2.py  scanData1.py
because/probability/: __init__.py  direction.py  independence.py  pdf.py  prob.py  probCharts.py  probquery.py  standardiz.py  uprob.py  utils.py
because/probability/experimental/: cprobPlot4D.py  eliptical.py  jointDotPlot.py  jps.py  methodTest3D.py  probPlot2D_exp.py
because/probability/rcot/: RCoT.py  RIT.py  dist.py  expandgrid.py  hbe.py  lpb4.py  matrix2.py  normalize.py  (+4 more)
because/synth/: __init__.py  extract_data.py  gen_data.py  read_data.py  truncate.py
because/visualization/: __init__.py  cmodel.py  grid.py  grid2.py  heatmap.py  probPlot1D.py  probPlot2D.py  probPlot2D_bound.py  probPlot2D_exp.py  probPlot3D.py  probPlot3D_bound.py  probPlot3D_exp.py  probPlotAll.py  viz.py
(+58 files in other folders)
