[metadata]
name = because
version = 0.9.1
author = Roger Dev
author_email = Roger.Dev@lexisnexisrisk.com
description = Causal Data Analytics Package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RogerDev/Because
project_urls =
    Bug Tracker = https://github.com/RogerDev/Because/issues
classifiers =
    Programming Language :: Python :: 3
    License :: Apache 2.0
    Operating System :: OS Independent

[options]

packages = find:
python_requires = >=3.6

[options.packages.find]
where = 

install_requires = ['networkx',
                    'numpy',
                    'matplotlib',
                    ]
